legg til rest-endepunkt for verge med applikaskjon betingelse