@@ -1,7 +1,7 @@
 package no.nav.foreldrepenger.tilbakekreving.behandling.impl.verge;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
@@ -39,72 +39,78 @@ class OpprettVergeTjenesteTest extends FellesTestOppsett {
     }
 
     @Test
-    void skal_lagre_verge_informasjon_når_verge_er_advokat() {
+    void skal_lagre_verge_når_verge_er_organisasjon() {
         var vergeDto = lagVergeDto(VergeType.ADVOKAT);
         when(virksomhetTjenesteMock.validerOrganisasjon(anyString())).thenReturn(true);
-        opprettVergeTjeneste.lagreVergeInformasjon(behandling, vergeDto);
-        Optional<VergeEntitet> vergeEntitet = vergeRepository.finnVergeInformasjon(internBehandlingId);
-        assertThat(vergeEntitet).isNotEmpty();
-        VergeEntitet vergeOrg = vergeEntitet.get();
-        fellesVergeAssert(vergeDto, vergeOrg);
-        assertThat(vergeOrg.getOrganisasjonsnummer()).isNotEmpty();
-        assertThat(vergeOrg.getVergeType()).isEqualByComparingTo(VergeType.ADVOKAT);
-        fellesHistorikkAssert();
+        opprettVergeTjeneste.opprettVerge(behandling.getId(), behandling.getFagsakId(), vergeDto);
+        var vergeEntitet = vergeRepository.finnVergeInformasjon(internBehandlingId);
+        assertThat(vergeEntitet)
+                .isPresent()
+                .hasValueSatisfying(ve -> assertVerge(ve, vergeDto));
+        assertHistorikkinnslag();
     }
 
     @Test
-    void skal_lagre_verge_informasjon_når_verge_er_ikke_advokat() {
+    void skal_lagre_verge_når_verge_er_person() {
         var vergeDto = lagVergeDto(VergeType.FBARN);
         when(mockTpsTjeneste.hentAktørForFnr(any(PersonIdent.class))).thenReturn(Optional.of(behandling.getAktørId()));
-        opprettVergeTjeneste.lagreVergeInformasjon(behandling, vergeDto);
-        Optional<VergeEntitet> vergeEntitet = vergeRepository.finnVergeInformasjon(internBehandlingId);
-        assertThat(vergeEntitet).isNotEmpty();
-        VergeEntitet vergePerson = vergeEntitet.get();
-        fellesVergeAssert(vergeDto, vergePerson);
-        assertThat(vergePerson.getVergeAktørId()).isNotNull();
-        assertThat(vergePerson.getVergeType()).isEqualByComparingTo(VergeType.FBARN);
-        fellesHistorikkAssert();
+        opprettVergeTjeneste.opprettVerge(behandling.getId(), behandling.getFagsakId(), vergeDto);
+
+        var vergeEntitet = vergeRepository.finnVergeInformasjon(internBehandlingId);
+        assertThat(vergeEntitet)
+                .isPresent()
+                .hasValueSatisfying(ve -> assertVerge(ve, vergeDto));
+        assertHistorikkinnslag();
     }
 
     @Test
-    void skal_ikke_lagre_verge_informasjon_når_verge_er_advokat_men_orgnummer_ikke_finnes() {
+    void skal_feile_når_vergeorganisasjon_ikke_finnes() {
         var vergeDto = lagVergeDto(VergeType.ADVOKAT);
         when(virksomhetTjenesteMock.validerOrganisasjon(anyString())).thenReturn(false);
-        var e = assertThrows(IllegalStateException.class,
-                () -> opprettVergeTjeneste.lagreVergeInformasjon(behandling, vergeDto));
-        assertThat(e.getMessage()).contains("OrgansisasjonNummer er ikke gyldig");
+        assertThatIllegalStateException().isThrownBy(() -> opprettVergeTjeneste.opprettVerge(behandling.getId(), behandling.getFagsakId(), vergeDto))
+                .withMessage("OrgansisasjonNummer er ikke gyldig");
     }
 
-    private void fellesVergeAssert(OpprettVergeDto vergeDto, VergeEntitet vergeEntitet) {
-        assertThat(vergeEntitet.getGyldigFom()).isEqualTo(vergeDto.gyldigFom());
-        assertThat(vergeEntitet.getGyldigTom()).isEqualTo(vergeDto.gyldigTom());
-        assertThat(vergeEntitet.getNavn()).isEqualTo(vergeDto.navn());
-        assertThat(vergeEntitet.getKilde()).isEqualTo(KildeType.FPTILBAKE.name());
-        assertThat(vergeEntitet.getBegrunnelse()).isEqualTo("begrunnelse");
+    private void assertVerge(VergeEntitet vergeEntitet, OpprettVergeDto expected) {
+        assertThat(vergeEntitet).isNotNull().satisfies(ve -> {
+            assertThat(ve.getKilde()).isEqualTo(KildeType.FPTILBAKE.name());
+            assertThat(ve.getVergeType()).isEqualTo(expected.vergeType());
+            assertThat(ve.getNavn()).isEqualTo(expected.navn());
+            assertThat(ve.getGyldigFom()).isEqualTo(expected.gyldigFom());
+            assertThat(ve.getGyldigTom()).isEqualTo(expected.gyldigTom());
+            assertThat(ve.getBegrunnelse()).isEqualTo(expected.begrunnelse());
+            if (VergeType.ADVOKAT.equals(expected.vergeType())) {
+                assertThat(ve.getOrganisasjonsnummer()).isEqualTo(expected.organisasjonsnummer());
+                assertThat(ve.getVergeAktørId()).isNull();
+            } else {
+                assertThat(ve.getVergeAktørId()).isEqualTo(behandling.getAktørId());
+                assertThat(ve.getOrganisasjonsnummer()).isNull();
+            }
+        });
     }
 
-    private void fellesHistorikkAssert() {
+    private void assertHistorikkinnslag() {
         var historikkinnslager = historikkinnslagRepository.hent(internBehandlingId);
         assertThat(historikkinnslager).hasSize(2);
-        var historikkinnslagTbkOpprettet = historikkinnslager.get(0);
-        assertThat(historikkinnslagTbkOpprettet.getTittel()).isEqualTo("Tilbakekreving opprettet");
-        assertThat(historikkinnslagTbkOpprettet.getAktør()).isEqualTo(HistorikkAktør.VEDTAKSLØSNINGEN);
-
-        var historikkinnslagRegistrerOmVerge = historikkinnslager.get(1);
-        assertThat(historikkinnslagRegistrerOmVerge.getSkjermlenke()).isEqualTo(SkjermlenkeType.FAKTA_OM_VERGE);
-        assertThat(historikkinnslagRegistrerOmVerge.getLinjer()).hasSize(1);
-        assertThat(historikkinnslagRegistrerOmVerge.getLinjer().getFirst().getTekst()).contains("Registering av opplysninger om verge/fullmektig");
+        assertThat(historikkinnslager.getFirst()).satisfies(h -> {
+            assertThat(h.getTittel()).isEqualTo("Tilbakekreving opprettet");
+            assertThat(h.getAktør()).isEqualTo(HistorikkAktør.VEDTAKSLØSNINGEN);
+        });
+        assertThat(historikkinnslager.getLast()).satisfies(h -> {
+            assertThat(h.getAktør()).isEqualTo(HistorikkAktør.SAKSBEHANDLER);
+            assertThat(h.getSkjermlenke()).isEqualTo(SkjermlenkeType.FAKTA_OM_VERGE);
+            assertThat(h.getTekstLinjer()).hasSize(2).containsExactly("Opplysninger om verge/fullmektig er registrert.", "Dette er en begrunnelse.");
+        });
     }
 
     private OpprettVergeDto lagVergeDto(VergeType vergeType) {
         return new OpprettVergeDto(
                 "John Doe",
-                "12345678901",
+                VergeType.ADVOKAT.equals(vergeType) ? null : "12345678901",
                 LocalDate.now().minusYears(1),
                 LocalDate.now(),
                 vergeType,
-                null,
-                "begrunnelse"
+                VergeType.ADVOKAT.equals(vergeType) ? "123456789" : null, "Dette er en begrunnelse"
         );
     }
 }
